# repository

./: .gitignore  ALF_melmac.sh  ANTS_with_matrix.sh  BOCO_cbvbold.sh  BOCO_cbvbold_NORDIC.sh  Basis_do.sh  Down_sample_3d.sh  GLM_w_1dim.sh  GM_mask.sh  MELODIC_design_template.fsf  MP2RAGE2veins.txt~  MP2RAGE_2_EPIT1_with_mask.sh  MP2RAGE_slab.sh  Mean_NulledNotnulled.sh  My_RETROICOR.sh  NORDIC_wrapper.sh  NORDIC_wrapper_noise.sh  Nordic_remove3_noise.sh  Nordic_remove4_noise.sh  Nordic_remove_noise.sh  Nordic_remove_one_noise.sh  Partial_Fourier_PSF.sh  README.md  Renzo_ICA_cluster.sh  Renzo_ICA_subdevide.sh  Renzo_mask.sh  Renzo_melodic.sh  SNR0_s.sh  Spiral_T2S_corr.sh  T1w_generation.sh  Up_sample_2d.sh  Up_sample_3d.sh  Up_sample_3d_ANTS.sh  Up_sample_MP2RAGE.sh  VAPER.sh  VASO_run.sh  VASO_run_with_MELODIC_and_phase.sh  VASO_run_with_feat.sh  VASO_run_with_feat_and_phase.sh  VASO_run_with_phase.sh  (+96 more)
2DGRIDSPACE/: 2DGRIDSPACE.cpp  Makefile
2DGRIDSPACE_TIME/: 2DGRIDSPACE_TIME  2DGRIDSPACE_TIME.cpp
2D_GRID/: 2D_GRID
2Dgtrans2anat/: 2Dgtrans2anat  2Dgtrans2anat.cpp  Makefile
3T_VASO_scripts/: 1_BOCO_all.sh  7_Layer_profile.sh  GLM_all.sh  ROImask_all.sh  average_profiles.sh  combine_VASO_all.sh  design_0.fsf  design_1.fsf  design_VASOcomb.fsf  layerification.sh  prep_layers.sh
ANTI_BOLD/: antiBold.cpp
ANTI_BOLD_COMPLEX/: ANTIBOLD_COMPLEX  ANTIBOLD_COMPLEX.cpp  Makefile
ARCHIVE/: add_five_s.sh  afni_VASO_eval_SPM.sh  afni_coil_combine.sh  get_rim.sh
Alignement_scripts/: ANTS_mesoveins.sh  Apply_initial_transform.sh  MAFI2EPI.sh  align_mesovein_templ.sh  align_mesovein_templ_series.sh  identity_transform.sh  template_finder.sh
CLEAN/: CLEAN_MP2R  CLEAN_MP2R.cpp
COIL_CORREL/: COIL_CORREL.cpp  Makefile  gnuplot4.txt
COPY_GEOM/: COPY_GEOM.cpp  Makefile
CORREL_w_1dim/: CORREL_w_1dim  CORREL_w_1dim.cpp  Makefile
CROSS_CORREL/: CROSS_CORREL  CROSS_CORREL.cpp  Makefile  gnuplot4.txt  gnuplot_timecourese.txt
Center_of_mass/: CENTEROFMASS.cpp
Combine_LAYERS/: ADD_LAYERS
DAVE_coil_comb/: DAVE_coil_rename.sh  Dave_prepare.sh  dave_rename.sh  run_FindBestWeights_Wrapper.sh
DLPFC_Emily/: README.txt  Up_sample_2d.sh  comb.sh  get_time_courses.sh  gnuplot_BOLD.txt  gnuplot_VASO.txt  sort_trials_A.sh  sort_trials_G.sh
EXTR_1D_TIMESERIES/: EXTR_1D_TIMESERIES  EXTR_1D_TIMESERIES.cpp  Makefile  gnuplot_EXTR_1D_TIMESERIES.txt
Fuzzy_Ripples/: oddeven.sh
GLOSSY_LAYERS/: GLOSSY_LAYERS.cpp
GM_Multi_TI/: GM_MASK  GM_MASK.cpp  Makefile  gnuplot.txt
GROW_LAYERS/: GROW_LAYERS  GROW_LAYERS.cpp  Makefile
HIGHEST/: HIGHEST  Makefile
HIST_ME/: HIST_ME.cpp  (+3 more)
NORDIC/NORDIC_Python_withAI_fix/python/: pyproject.toml
NORDIC/NORDIC_Python_withAI_fix/python/src/nordic/: __init__.py  denoise.py
NORDIC/NORDIC_Python_withAI_fix/python/src/nordic/cli/: __init__.py  nordic_dset.py  nordic_filewise.py
NORDIC/NORDIC_Python_withAI_fix/python/src/nordic/data/: config.json
NORDIC/NORDIC_Python_withAI_fix/python/tests/: conftest.py  test_denoise.py  test_matlab_parity.py  utils.py
(+634 files in other folders)
